added custom config section

--- a/UserServiceTester/UserServiceTester/App.config
+++ b/UserServiceTester/UserServiceTester/App.config
@@ -1,9 +1,22 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+  <configSections>
+    <section name="masterslaves" type="UserServiceTester.CustomSections.MasterSlavesConfig,
+             UserServiceTester"/>
+  </configSections>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
   </startup>
   <appSettings>
     <add key="serverStatePathFile" value="serverstate.xml" />
   </appSettings>
+
+  <masterslaves>
+    <master ip="127.0.0.1" port="11000" />
+    <slaves>
+      <slave ip="127.0.0.1" port="11001"/>
+      <slave ip="127.0.0.1" port="11002"/>
+    </slaves>
+  </masterslaves>
+
 </configuration>
