--- a/UserServiceTester/UserServiceTester/MasterUserServiceLauncher.csproj
+++ b/UserServiceTester/UserServiceTester/MasterUserServiceLauncher.csproj
@@ -47,7 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CustomSections\Master.cs" />
+    <Compile Include="CustomSections\Slave.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
