--- a/UserServiceTester/UserServiceTester/App.config
+++ b/UserServiceTester/UserServiceTester/App.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <configSections>
-    <section name="masterslaves" type="UserServiceTester.CustomSections.MasterSlavesConfig,
-             UserServiceTester"/>
+    <section name="masterslaves" type="Service.CustomSections.MasterSlavesConfig,
+             Service"/>
   </configSections>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
@@ -12,7 +12,7 @@
   </appSettings>
 
   <masterslaves>
-    <master ip="127.0.0.1" port="11000" />
+    <master ip="127.0.0.2" port="11000" />
     <slaves>
       <slave ip="127.0.0.1" port="11001"/>
       <slave ip="127.0.0.1" port="11002"/>
