--- a/UserServiceTester/CustomProtocols/Entities.csproj
+++ b/UserServiceTester/CustomProtocols/Entities.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{D112BB01-C36B-4D50-A5D4-1E603F2280FC}</ProjectGuid>
+    <ProjectGuid>{46FCD554-170A-409D-B7FD-EA7E72E60980}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Service</RootNamespace>
-    <AssemblyName>Service</AssemblyName>
+    <RootNamespace>CustomProtocols</RootNamespace>
+    <AssemblyName>CustomProtocols</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -29,16 +29,8 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <PropertyGroup>
-    <StartupObject />
-  </PropertyGroup>
   <ItemGroup>
-    <Reference Include="FluentValidation, Version=6.2.1.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\FluentValidation.6.2.1.0\lib\Net45\FluentValidation.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System" />
-    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -48,33 +40,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AllAssemblyVersionsDeserializationBinder.cs" />
-    <Compile Include="CustomSections\Master.cs" />
-    <Compile Include="CustomSections\MasterSlavesConfig.cs" />
-    <Compile Include="CustomSections\Slave.cs" />
-    <Compile Include="CustomSections\Slaves.cs" />
-    <Compile Include="Exceptions\ValidationException.cs" />
-    <Compile Include="IdGenerators\DefaultIdGenerator.cs" />
-    <Compile Include="Interfaces\IIdGenerator.cs" />
-    <Compile Include="Interfaces\IMasterService.cs" />
-    <Compile Include="Interfaces\ISlaveService.cs" />
-    <Compile Include="Interfaces\IUserStorage.cs" />
-    <Compile Include="NetworkHelper.cs" />
-    <Compile Include="SlaveUserService.cs" />
-    <Compile Include="Storages\ListStorage.cs" />
-    <Compile Include="Storages\XmlStorage.cs" />
-    <Compile Include="MasterUserService.cs" />
+    <Compile Include="Message.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Validations\CustomValidation.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Entities\Entities.csproj">
-      <Project>{03944aad-d8d0-478a-84e6-51d97e860111}</Project>
-      <Name>Entities</Name>
-    </ProjectReference>
+    <Compile Include="User.cs" />
+    <Compile Include="Visa.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
