master notificates slaves about crud operations

--- a/UserServiceTester/UserServiceTester/App.config
+++ b/UserServiceTester/UserServiceTester/App.config
@@ -16,6 +16,7 @@
     <slaves>
       <slave ip="127.0.0.2" port="11003"/>
       <slave ip="127.0.0.3" port="11004"/>
+      <slave ip="127.0.0.4" port="11005"/>
     </slaves>
   </masterslaves>
 
